--- a/frontend/src/app/components/github-integration/github-integration.html
+++ b/frontend/src/app/components/github-integration/github-integration.html
@@ -47,9 +47,14 @@
       style="width: 100%; height: 500px;"
       class="ag-theme-alpine"
       [columnDefs]="columnDefs"
+      [defaultColDef]="defaultColDef"
       [rowData]="rowData"
       [pagination]="true"
       [paginationPageSize]="paginationPageSize"
-      (paginationChanged)="onPageChange($event)">
+      [paginationAutoPageSize]="false"
+      [suppressPaginationPanel]="false"
+      (paginationChanged)="onPageChange($event)"
+      [rowSelection]="rowSelection"
+      (selectionChanged)="onSelectionChanged($event)">
     </ag-grid-angular>
   </div>
